apps/overlays/development/minimaldo/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimaldo-backend
spec:
  template:
    spec:
      imagePullSecrets:
      - name: thakurnishu-packages-read-secret
      containers:
      - name: backend
        image: ghcr.io/thakurnishu/minimaldo-backend:main-9913395-1752917399 # {"$imagepolicy": "flux-system:minimaldo-backend-image-policy"}
