apps/overlays/development/minimaldo/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimaldo-frontend
spec:
  template:
    spec:
      imagePullSecrets:
      - name: thakurnishu-packages-read-secret
      containers:
      - name: frontend
        image: ghcr.io/thakurnishu/minimaldo-frontend:main-6e82149-1752610093 # {"$imagepolicy": "flux-system:minimaldo-frontend-image-policy"}
