apps/overlays/development/minimaldo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minimaldo-frontend-httproute
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - minimaldo.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: minimaldo-frontend-svc
      port: 80
